Miscellaneous edits to Index page

--- a/econvenor/commonstatic/css/landing.css
+++ b/econvenor/commonstatic/css/landing.css
@@ -362,7 +362,8 @@ a:focus.email-link {
 }
 
 .fa-terminal,
-.fa-bug {
+.fa-bug,
+.fa-lightbulb-o {
 left: 9px; /* centers terminal icon horizonally on box icon */
 }
 
