Added text to licence terms

--- a/landing/templates/source.html
+++ b/landing/templates/source.html
@@ -31,7 +31,7 @@
             <h2 class="red">Licence</h2>
             <p class="lead">This licence applies to use of the eConvenor source code if, for example, you decide to run it on your own server. This licence doesn't apply to use of the econvenor.org service &mdash; it's covered by our <a href={% url 'terms' %}>Terms and Conditions</a>.</p>
             <p>Use of the eConvenor source code and its documentation (the "Software") is subject to these conditions:</p>
-            <p>1. The Software must only be used by groups or organisations which are not-for-profit, have a progressive focus and are commited to social justice.</p>
+            <p>1. The Software must only be used by groups or organisations which are not-for-profit, have a progressive focus. are commited to social justice and do not aim to spread religion.</p>
             <p>2. Unions and political parties must pay the eConvenor project an annual licence fee to use the Software. Unions and political parties must contact the eConvenor project by email and pay the licence fee which the eConvenor project sets in return for the right to use the Software.</p>
             <p>3. Groups who are not unions or political parties and who use the Software should make an annual donation to the eConvenor project if they have the financial resources to do so.</p>
             <p>4. Groups who are not unions or political parties and who use the Software and who do not have the financial resources to make an annual donation to the eConvenor project may use the Software free of charge.</p>
