--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -23,7 +23,7 @@
         <div class="row">
           <div class="col-md-10">
             <h2 class="red">Why you might love working on eConvenor</h2>
-            <p class="lead">Click an item to expand it:</p>
+            <p>Click an item to expand it.</p>
             <ul class="fa-ul">
               <li>
                 <div class="faq-title">
@@ -81,7 +81,7 @@
               </li>
             </ul> 
             <h2 class="red">The sort of people we're looking for</h2>
-            <p class="lead">Click an item to expand it:</p>
+            <p>Click an item to expand it.</p>
             <ul class="fa-ul">
               <li>
                 <div class="faq-title">
@@ -140,8 +140,8 @@
               </li>
             </ul>
             <h2 class="red">Sound okay?</h2>
-            <p class="lead">If this sounds like it's up your alley, <a href={% url 'contact' %}>let us know!</a></p>
-            <p class="lead"> Note that Convenor is a volunteer organisation and doesn't have paid jobs.</p>
+            <p>If this sounds like it's up your alley, <a href={% url 'contact' %}>let us know</a>.</p>
+            <p> Note that Convenor is a volunteer organisation and doesn't have paid jobs.</p>
           </div><!-- /.col --> 
         </div><!-- /.row -->
       </div><!-- /.container -->
