--- a/authentication/templates/user_login.html
+++ b/authentication/templates/user_login.html
@@ -24,6 +24,10 @@
         background-color: #eee;
       }
 
+      .red {
+        color: #ff0066;
+      }
+      
       .form-signin {
         max-width: 330px;
         padding: 80px 15px 15px 15px;
@@ -73,15 +77,7 @@
 
     <div class="container">
     
-      <h1 class="text-center">eConvenor beta version is now live.</h1>
-      <br>
-      
-      <h3 class="text-center">To sign up for an account click <a href={% url 'qualify' 'step0' %} class="red">here</a>.</h3>
-      
-      <br>
- 
-      <h3 class="text-center">If you have an account, sign in below.</h3>
-  
+      <h1 class="text-center red">Log in to eConvenor</h1>
       <form class="form-signin" role="form" method="POST">
         {% csrf_token %}
         <input type="text" class="form-control" id="id_email" name="email" placeholder="Email" required autofocus>
@@ -89,15 +85,13 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit" name="login_button">Sign in</button>
       </form>
   	  <p class="text-center red">{{ error }}</p>
-
       <br>
-
       <h3 class="text-center">Forgotten your password?</h3>
       <p class="text-center">Drop us an <a href="mailto:mail@econvenor.org?subject=I+need+a+password+reset">email</a> and we'll sort you out with password reset.</p>
-
+      <br>
+      <h3 class="text-center">To sign up for an account click <a href={% url 'qualify' 'step0' %} class="red">here</a>.</h3>
   	  
     </div> <!-- /container -->
-
 
     <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
