--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -192,6 +192,10 @@
         </thead>
         <tbody> 
           <tr>
+            <td>Added 8 extra pages to the eConvenor website. Navigate to them through the footer at www.econvenor.org.</td>
+            <td>03 July 2014</td>
+          </tr>
+          <tr>
             <td>Revamped the front page of the website and added screenshots.</td>
             <td>13 Jun 2014</td>
           </tr>
@@ -241,24 +245,20 @@
         </thead>
         <tbody> 
           <tr>
-            <td>Expand the eConvenor website (what you see before you log in).</td>
-            <td>Mid June</td>
-          </tr>
-          <tr>
             <td>Allow the creation of reusable, customisable agenda templates.</td>
-            <td>Mid June</td>
+            <td>July 2014</td>
           </tr>
           <tr>
             <td>Allow a message to be added to agenda/minutes covering emails.</td>
-            <td>Mid June</td>
+            <td>July 2014</td>
           </tr>
           <tr>
             <td>Remove character limit for "notes" text in minutes.</td>
-            <td>Mid June</td>
+            <td>July 2014</td>
           </tr>
           <tr>
             <td>Enable addition of group logo to agendas/minutes.</td>
-            <td>Late June</td>
+            <td>July 2014</td>
           </tr>
         </tbody>
       </table>
