Added two questions to questions page

--- a/landing/templates/questions.html
+++ b/landing/templates/questions.html
@@ -27,6 +27,32 @@
               <li>
                 <div class="faq-title">
                   <i class="fa fa-li fa-plus-circle fa-lg red"></i>
+                  <p class="lead">How is eConvenor different from NationBuilder?</p>
+                </div>
+                <div class="faq-body">
+                  <p class="lead">NationBuilder's focus is external, eConvenor's focus is internal.</p>
+                  <p>NationBuilder is all about your group's relationships with people outside the core of your group &mdash; your supporters and donors.</p>
+                  <p>eConvenor's focus is getting your group better organised internally, with a focus on making meetings productive and making sure people in the group do the tasks they are responsible for.</p>
+                  <p>There's no significant overlapping functionality between eConvenor and NationBuilder that we know of.</p>
+                </div>
+              </li>
+              <li>
+                <div class="faq-title">
+                  <i class="fa fa-li fa-plus-circle fa-lg red"></i>
+                  <p class="lead">How is eConvenor different from tools like Basecamp, Asana and PB Works?</p>
+                </div>
+                <div class="faq-body">
+                  <p class="lead">eConvenor is built specifically for community and activist groups.</p>
+                  <p>eConvenor has things in common with online project management tools, but there are important differences:</p>
+                  <p><strong>eConvenor has a focus on meetings.</strong> It's built to make meetings productive and capture meeting outcomes (i.e. tasks and decisions) by producing very clear, informative agendas and minutes. We're yet to find another web service which does this. Well organised and documented meetings are vitally important for effective activist groups.</p>
+                  <p><strong>eConvenor is built for loose-knit groups.</strong> Whereas all group members need to have their own account on other services and log in to it regularly, with eConvenor only the group's convenor/s have an account. eConvenor "pushes" information like agendas, minutes and tasks out to the group via email, so group members don't need to manage yet another web account.</p>
+                  <p><strong>eConvenor is built by activists specifically for activist groups.</strong> Other services, although free (or often "freemium"), are driven by a profit motive and they're not tailored to activists.</p>
+                </div>
+              </li>
+
+              <li>
+                <div class="faq-title">
+                  <i class="fa fa-li fa-plus-circle fa-lg red"></i>
                   <p class="lead">How does eConvenor make money?</p>
                 </div>
                 <div class="faq-body">
