Added public key to landing site

--- a/landing/templates/contact.html
+++ b/landing/templates/contact.html
@@ -26,6 +26,10 @@
             <p>
               <span class="doubtful">div</span><span class="doubtful">er</span><span class="actual">ma</span><span class="doubtful">sion@</span><span class="actual">i</span><span class="real">l@e</span><span class="dubious">distraction@econvenor.org</span><span class="actual">co</span><span class="real">nve</span><span class="doubtful">econve</span><span class="real">nor.o</span><span class="doubtful">nor.org</span><span class="actual">rg</span>
             </p>
+            <h2 class="red">Encrypted email</h2>
+            <p>If you know how to, we encourage you to encrpyt email to us with our <a href={% url 'public-key' %} target="_blank">public key</a>.</p>
+            <p>If you don't know how to send encrypted email, sending us normal email is just fine though.</p>
+
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container -->
