Added text to volunteers page

--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -46,10 +46,19 @@
               <li>
                 <div class="faq-title">
                   <i class="fa fa-li fa-plus-circle fa-lg red"></i>
-                  <p class="lead">Well organised</p>
+                  <p class="lead">All genders welcome</p>
                 </div>
                 <div class="faq-body">
-                  <p>An effective project must be a well organised project. We dislike chaos and poor organisation because it wastes time and energy. We're into getting things done and done well, so we plan carefully and invest time in being well organised.</p>
+                  <p>eConvenor is not another technology project with a culture of oblivious, unquestioning maculinity. We oppose all forms of oppression, including &mdash; of course &mdash; oppression based on gender. eConvenor welcomes people of all genders with respect and without prejudice.</p>
+                </div>
+              </li>
+              <li>
+                <div class="faq-title">
+                  <i class="fa fa-li fa-plus-circle fa-lg red"></i>
+                  <p class="lead">Well-organised</p>
+                </div>
+                <div class="faq-body">
+                  <p>An effective project must be a well-organised project. We dislike chaos and poor organisation because it wastes time and energy. We're into getting things done and done well, so we plan carefully and invest time in being well-organised.</p>
                 </div>
               </li>
               <li>
