Fixed a typo on volunteer page

--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -49,7 +49,7 @@
                   <p class="lead">All genders welcome</p>
                 </div>
                 <div class="faq-body">
-                  <p>eConvenor is not another technology project with a culture of oblivious, unquestioning maculinity. We oppose all forms of oppression, including &mdash; of course &mdash; oppression based on gender. eConvenor welcomes people of all genders with respect and without prejudice.</p>
+                  <p>eConvenor is not another technology project with a culture of oblivious, unquestioning masculinity. We oppose all forms of oppression, including &mdash; of course &mdash; oppression based on gender. eConvenor welcomes people of all genders with respect and without prejudice.</p>
                 </div>
               </li>
               <li>
