Typo correction on landing source page

--- a/landing/templates/source.html
+++ b/landing/templates/source.html
@@ -28,7 +28,7 @@
             <h2 class="red">Issue tracker</h2>
             <p>Take a look at eConvenor's <a href="https://trac.econvenor.org" target="_blank">Trac issue tracker</a> to see what needs to be done next.</p>
             <p>Feel free to take on anything you see there!</p>
-            <p>If your browser gives you a security warning for trac.econvenor.org, don't worry, it's just that the SSL certificate is for www.econvenor.org. Yuo can safely ignore the warning.</p>
+            <p>If your browser gives you a security warning for trac.econvenor.org, don't worry, it's just that the SSL certificate is for www.econvenor.org. You can safely ignore this warning.</p>
             <h2 class="red">Licence</h2>
             <p>This licence applies to use of the eConvenor source code and documentation if, for example, you decide to run it on your own server. This licence doesn't apply to use of the econvenor.org service &mdash; that's covered by our <a href={% url 'terms' %}>Terms and Conditions</a>.</p>
             <p>Use of the eConvenor source code and its documentation (the "Software") is subject to these conditions:</p>
