--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -643,6 +643,15 @@ tbody tr:hover {
   margin-bottom: 5px;
 }
 
+.checkbox {
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+.checkbox input[type="checkbox"] {
+  margin-left: 0px;
+}
+
 
 /* SPACING
 -------------------------------------------------- */
