--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -192,6 +192,10 @@
         </thead>
         <tbody> 
           <tr>
+            <td>"Add task" and "Add decision" buttons are now highlighted when a minutes item's notes are being entered.</td>
+            <td>30 July 2014</td>
+          </tr>
+          <tr>
             <td>Added 8 extra pages to the eConvenor website. Navigate to them through the footer at www.econvenor.org.</td>
             <td>03 July 2014</td>
           </tr>
