--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -250,19 +250,19 @@
         <tbody> 
           <tr>
             <td>Allow the creation of reusable, customisable agenda templates.</td>
-            <td>July 2014</td>
+            <td>Sept/Oct 2014</td>
           </tr>
           <tr>
             <td>Allow a message to be added to agenda/minutes covering emails.</td>
-            <td>July 2014</td>
+            <td>Sept/Oct 2014</td>
           </tr>
           <tr>
             <td>Remove character limit for "notes" text in minutes.</td>
-            <td>July 2014</td>
+            <td>Sept/Oct 2014</td>
           </tr>
           <tr>
             <td>Enable addition of group logo to agendas/minutes.</td>
-            <td>July 2014</td>
+            <td>Sept/Oct 2014</td>
           </tr>
         </tbody>
       </table>
