--- a/authentication/templates/user_login.html
+++ b/authentication/templates/user_login.html
@@ -27,6 +27,15 @@
       .red {
         color: #ff0066;
       }
+
+      .well {
+        min-height: 20px;
+        padding: 10px;
+        margin-top: 40px;
+        margin-bottom: -20px;
+        background-color: #f5f5f5;
+        border: 1px solid #e3e3e3;
+      }
       
       .form-signin {
         max-width: 330px;
@@ -78,6 +87,10 @@
     <div class="container">
     
       <h1 class="text-center red">Log in to eConvenor</h1>
+      <div class="well">
+        <h3 class="text-center red">Service outage</h3>
+        <p class="text-center">The eConvenor service is scheduled to be down between midnight and 6:00am on Saturday August 23rd Australian Eastern Standard Time (2:00pm to 8:00pm Friday UTC).</p>
+      </div>
       <form class="form-signin" role="form" method="POST">
         {% csrf_token %}
         <input type="text" class="form-control" id="id_email" name="email" placeholder="Email" required autofocus>
