Edited source, questions and volunteer pages

--- a/landing/templates/questions.html
+++ b/landing/templates/questions.html
@@ -87,9 +87,9 @@
                   <p class="lead">It's as secure as we can make it, but all security is relative.</p>
                   <p>There's no such thing as perfect computer security &mdash; data is routinely stolen even from well-resourced targets like governments and transnational corporations. We do our best to keep eConvenor secure, but we can't give any guarantees.</p>
                   <p>Broadly speaking, there are three types of security to consider with regard to data held in a web service &mdash; security against theft, security against government demand and security against accidental loss.</p>
-                  <p><strong>Theft:</strong> eConvenor is built on Django. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for data theft.</p>
-                  <p><strong>Government demand:</strong> eConvenor is based in Australia and runs on servers in the UK. We will only hand data over to a government agency if we are forced to by a valid Australian or UK court order, and even then we'll fight against any demand vigourously. Note though that goverment agencies have used sophisticated technical means to secretly collect data from even the largest web service providers (Gmail, Facebook, etc) and eConvenor's code and servers might be vulerable to such attacks.</p>
-                  <p><strong>Accidental loss:</strong> We keep multiple backups of your data on our UK server, and multiple backups of your data on our machines in Australia. The possibility of accidental loss of data is remote. Also, eConvernor emails you all your agendas and minutes, so you also have your own copies of much of the data which eConvenor stores for you.</p>
+                  <p><strong>Theft:</strong> eConvenor is built on Django. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the Netherlands. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for data theft.</p>
+                  <p><strong>Government demand:</strong> eConvenor is based in Australia and runs on a server in the Netherlands. We will only hand data over to a government agency if we are forced to by a valid court order, and even then we'll fight against any demand vigourously. Note though that goverment agencies have used sophisticated technical means to secretly collect data from even the largest web service providers (Gmail, Facebook, etc) and eConvenor's code and servers might be vulerable to such attacks.</p>
+                  <p><strong>Accidental loss:</strong> We keep multiple backups of your data on our Netherlands server, and multiple backups of your data on our machines in Australia. The possibility of accidental loss of data is remote. Also, eConvernor emails you all your agendas and minutes, so you also have your own copies of much of the data which eConvenor stores for you.</p>
                 </div>
               </li>
               <li>
@@ -111,7 +111,7 @@
                 <div class="faq-body">
                   <p class="lead">No.</p>
                   <p>We will not voluntarily give/transfer/sell/whatever your data to anyone for any reason.</p>
-                  <p>If we are pressured to hand over data by a government agency, we will resist vigourously, but if we are faced with a valid Australian or UK court order (eConvenor is based in Australia and runs on servers in the UK), we will comply with it.</p>
+                  <p>If we are pressured to hand over data by a government agency, we will resist vigorously, but if we are faced with a valid court order, we will comply with it.</p>
                 </div>
               </li>
               <li>
