--- a/landing/templates/source.html
+++ b/landing/templates/source.html
@@ -23,7 +23,7 @@
         <div class="row">
           <div class="col-md-10">
             <h2 class="red">Code repository</h2>
-            <p>eConvenor is open-source and the code is in our <a href="https://github.com/econvenor/econvenor" target="_blank">Github repo</a>.</p>
+            <p>The eConvenor source code is in our <a href="https://github.com/econvenor/econvenor" target="_blank">Github repo</a>.</p>
             <p>You can clone it and start hacking right now if you like.</p>
             <h2 class="red">Issue tracker</h2>
             <p>Have a look at eConvenor's <a href="https://trac.econvenor.org" target="_blank">Trac issue tracker</a> to see what needs to be done next.</p>
