--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -143,8 +143,8 @@
                   <p class="lead">Useful skills and/or initiative</p>
                 </div>
                 <div class="faq-body">
-                  <p>We are looking specifically for people with skills in coding (Python/Django), web development (HTML/CSS/JS), web application security, graphic design and writing/communications.</p>
-                  <p>That said, there are also always miscellaneous tasks which need doing, and the only pre-requisite for working on them is an ability to take some initiative and solve problems. If you're the right sort of person, we'll find ways for you to work on eConvenor with us no matter what your skills are.</p>
+                  <p>We are looking specifically for people with skills in coding (Python/Django), front-end development (HTML/CSS/JS), web application security, graphic design and writing/communications.</p>
+                  <p>That said, there are always miscellaneous tasks which need doing, and the only pre-requisite for working on them is an ability to take some initiative and solve problems. If you're the right sort of person, we'll find ways for you to work on eConvenor with us no matter what your skills are.</p>
                 </div>
               </li>
             </ul>
