Added donate link to body of landing page

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -299,7 +299,7 @@
               <li><i class="fa-li fa fa-th-large fa-3x red"></i>
                 <ul>
                   <li><p class="lead red">Groups which can afford to contribute</p></li>
-                  <li><p>Groups who feel that they can afford to make a donation in return for using eConvenor should do so once each year.</p></li>
+                  <li><p>Groups who feel that they can afford to <a href={% url 'donate' %}>make a donation</a> in return for using eConvenor should do so once each year.</p></li>
                 </ul>                
               </li>
               <li><i class="fa-li fa fa-square fa-3x red"></i>
