--- a/registration/templates/register.html
+++ b/registration/templates/register.html
@@ -15,7 +15,7 @@ Log in details
 
       <div class="form-group">      
         {{ user_form.email.label_tag }}      
-        {{user_form.email|setclass:"form-control" }}
+        {{user_form.email|setclass:"form-control email" }}
         {{ user_form.email.errors }}
       </div>
       <div class="form-group">      
@@ -199,6 +199,12 @@ Log in details
     });
   })
   
+</script>
+
+<script type="text/javascript">
+  $('.email').on("keyup", function(){
+    $(this).val($(this).val().toLowerCase());
+  });
 </script>
 
 {% endblock extrajs %}
