Removed set_path function (Ticket #30)

--- a/registration/templates/welcome_email.html
+++ b/registration/templates/welcome_email.html
@@ -32,7 +32,7 @@
           </tr>   
           <tr>
             <td class="bodycopy fullpadding" bgcolor="#ffffff" style="font-size: 16px;line-height: 22px;text-align: left;color: #444444;padding: 30px 30px 30px 30px;font-family: sans-serif;">
-              Hi {name},<br/><br/>Welcome to eConvenor!<br/><br/>You've set up an account for <span class="redtext" style="color: #ff0066;">{group}</span>.<br/>Your login email address is <span class="redtext" style="color: #ff0066;">{email}</span>.<br/><br/>If you need some help getting started, you'll find a handy Quick Start Guide under the Help menu in your eConvenor account.<br/><br/>We hope eConvenor saves you and your group lots of time and effort.<br/><br/>Cheers!
+              Hi {{ name }},<br/><br/>Welcome to eConvenor!<br/><br/>You've set up an account for <span class="redtext" style="color: #ff0066;">{{ group }}</span>.<br/>Your login email address is <span class="redtext" style="color: #ff0066;">{{ email }}</span>.<br/><br/>If you need some help getting started, you'll find a handy Quick Start Guide under the Help menu in your eConvenor account.<br/><br/>We hope eConvenor saves you and your group lots of time and effort.<br/><br/>Cheers!
             </td>
           </tr>
           <tr>
