--- a/registration/templates/welcome_email_with_stylesheet.html
+++ b/registration/templates/welcome_email_with_stylesheet.html
@@ -52,7 +52,7 @@
           </tr>   
           <tr>
             <td class="bodycopy fullpadding" bgcolor="#ffffff">
-              Hi {name},<br/><br/>Welcome to eConvenor!<br/><br/>You've set up an account for <span class="redtext">{group}</span>.<br/>Your login email address is <span class="redtext">{email}</span>.<br/><br/>If you need some help getting started, you'll find a handy Quick Start Guide under the Help menu in your eConvenor account.<br/><br/>We hope eConvenor saves you and your group lots of time and effort.<br/><br/>Cheers!
+              Hi {{ name }},<br/><br/>Welcome to eConvenor!<br/><br/>You've set up an account for <span class="redtext">{{ group }}</span>.<br/>Your login email address is <span class="redtext">{{ email }}</span>.<br/><br/>If you need some help getting started, you'll find a handy Quick Start Guide under the Help menu in your eConvenor account.<br/><br/>We hope eConvenor saves you and your group lots of time and effort.<br/><br/>Cheers!
             </td>
           </tr>
           <tr>
